# ProcGovernor

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  README_src_outline.md
config/: config.ini
docs/en-US/: README.md
docs/en-US/apply.rs/: ApplyConfigResult.md  README.md  apply_affinity.md  apply_ideal_processors.md  apply_io_priority.md  apply_job_object_affinity.md  apply_memory_priority.md  apply_prime_threads.md  apply_prime_threads_demote.md  apply_prime_threads_promote.md  apply_prime_threads_select.md  apply_priority.md  apply_process_default_cpuset.md  get_handles.md  log_error_if_new.md  prefetch_all_thread_cycles.md  reset_thread_ideal_processors.md  update_thread_stats.md
docs/en-US/cli.rs/: CliArgs.md  README.md  get_config_help_lines.md  parse_args.md  print_cli_help.md  print_config_help.md  print_help.md  print_help_all.md
docs/en-US/collections.rs/: README.md
docs/en-US/config.rs/: ConfigConstants.md  ConfigResult.md  IdealProcessorRule.md  PrimePrefix.md  ProcessLevelConfig.md  README.md  ThreadLevelConfig.md  collect_group_block.md  collect_members.md  convert.md  cpu_indices_to_mask.md  format_cpu_indices.md  hotreload_blacklist.md  hotreload_config.md  mask_to_cpu_indices.md  parse_alias.md  parse_and_insert_rules.md  parse_constant.md  parse_cpu_spec.md  parse_ideal_processor_spec.md  parse_mask.md  read_bleack_list.md  read_config.md  read_utf16le_file.md  resolve_cpu_spec.md  sort_and_group_config.md
docs/zh-CN/: README.md
src/: apply.rs  cli.rs  config.rs  event_trace.rs  job_object.rs  lib.rs  logging.rs  main.rs
(+187 files in other folders)
