[package]
name = "proc_governor"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "proc_governor"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
eframe = "0.35.0"
egui = "0.35.0"
egui_extras = "0.35.0"
encoding_rs = "0.8.35"
ntapi = "0.4.1"
once_cell = "1.21.3"
rand = "0.10.0"
rustc-hash = "2.1.2"
smallvec = "1.15.1"
windows = { version = "0.62.2", features = ["Win32", "Win32_Foundation", "Win32_Globalization", "Win32_Security","Win32_System", "Win32_System_Console", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Etw", "Win32_System_Diagnostics_ToolHelp","Win32_System_Kernel","Win32_System_ProcessStatus","Win32_System_SystemInformation","Win32_System_Threading","Win32_System_Time","Win32_System_WindowsProgramming"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
